unpackaged/main/default/objects/sfsp__AttainmentPlanRow__c/sfsp__AttainmentPlanRow__c.object-meta.xml
<CustomObject>
    <label>Attainment Plan Row</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plan Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>