unpackaged/main/default/objects/sfsp__AttainmentPlanRow__c/fields/sfsp__Account__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attainment Plan Account Rows</relationshipLabel>
    <relationshipName>AttainmentPlanAccountRows</relationshipName>
    <type>Lookup</type>
</CustomField>