unpackaged/main/default/objects/sfsp__AttainmentPlanRow__c/fields/sfsp__AttainmentPlan__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AttainmentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attainment Plan</label>
    <referenceTo>sfsp__AttainmentPlan__c</referenceTo>
    <relationshipLabel>Attainment Plan Rows</relationshipLabel>
    <relationshipName>AttainmentPlanRows</relationshipName>
    <type>Lookup</type>
</CustomField>