unpackaged/main/default/objects/sfsp__AttainmentPlanRow__c/fields/sfsp__IsPriority__c.field-meta.xml
<CustomField>
    <fullName>sfsp__IsPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Priority</label>
    <type>Checkbox</type>
</CustomField>