unpackaged/main/default/objects/sfsp__AttainmentPlanRow__c/fields/sfsp__Notes__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>